# news-archive

./: .env.sample  .gitignore  .rsync-filter  GNUmakefile  README.md  app.py  news-archive.service  pyproject.toml
alembic/: env.py
daemon/: app.py  news-archive-daemon.service
scripts/: deploy.sh
web/: app.py  news-archive-web.service  news-archive.service
