[project]
name = "news-archive"
version = "0.1.0"
description = "News archive"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "apscheduler>=3.11.0",
    "dotenv>=0.9.9",
    "flask>=3.1.0",
    "gunicorn>=23.0.0",
    "requests>=2.32.3",
]

[dependency-groups]
dev = [
    "alembic>=1.15.2",
    "ruff>=0.11.6",
]
